# backend

./: pyproject.toml
backend/: __init__.py  __main__.py
backend/dto/: user.py
backend/entities/: country.py  group.py  message.py  user.py
backend/models/: country.py  group.py  message.py  user.py
backend/routes/: __init__.py  auth.py  error.py  errors.py  groups.py  users.py
tests/: conftest.py
tests/dto/: test_users.py
tests/routes/: test_auth.py  test_groups.py
